# ArrayOfPointers

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  test_arrayofpointers.F90
travis/: install-mpi.sh
